--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
   application:
     name: "healthCare"
   jpa:
+    properties:
+      hibernate.jdbc.time_zone: UTC
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: update
