--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/2-create-doctors.sql
   - include:
       file: db/changelog/3-create-visits.sql
+  - include:
+      file: db/changelog/4-add-unique-doctor-name-constraints.sql
