--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: db/changelog/3-create-visits.sql
   - include:
       file: db/changelog/4-add-unique-doctor-name-constraints.sql
+  - include:
+      file: db/changelog/5-add-unique-patient-name-constraint.sql
