-Refactored findAllPatients to use single query with dynamic filtering - Added support for filtering by `firstName` and `doctorIds` directly in the query. - Resolved N+1 query issue by fetching last visits for each patient in a single query. - Removed redundant database calls for `countPatientsByDoctorName` and `findByFirstNameAndLastName`.

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,7 @@ databaseChangeLog:
       file: db/changelog/4-add-unique-doctor-name-constraints.sql
   - include:
       file: db/changelog/5-add-unique-patient-name-constraint.sql
+  - include:
+      file: db/changelog/6-add-index-to-visits.sql
+  - include:
+      file: db/changelog/7-add-index-to-patients.sql
